--- a/src/main/resources/static/product-detail.html
+++ b/src/main/resources/static/product-detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ECサイト - 商品一覧</title>
+    <title>ECサイト - 商品詳細</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -20,10 +20,12 @@
 </header>
 
 <main class="container">
-    <h2>商品一覧</h2>
-    <div id="product-list" class="product-grid">
-        <p id="loading-message">商品データを読み込み中...</p>
-        <p id="error-message" class="error-text" style="display: none;">商品データの取得に失敗しました。</p>
+    <a href="/" class="back-link">&lt; 商品一覧に戻る</a>
+    <h2 id="product-detail-title">商品詳細</h2>
+    <div id="product-detail-content" class="product-detail-card">
+        <p id="loading-message-detail">商品詳細を読み込み中...</p>
+        <p id="error-message-detail" class="error-text" style="display: none;">商品詳細の取得に失敗しました。</p>
+        <p id="not-found-message" class="error-text" style="display: none;">指定された商品が見つかりませんでした。</p>
     </div>
 </main>
 
@@ -33,6 +35,6 @@
     </div>
 </footer>
 
-<script src="js/script.js"></script>
+<script src="js/product-detail.js"></script>
 </body>
 </html>
